# autodev-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: nightly-discover.yml  nightly-implement.yml
autodev/: __init__.py  analyze.py  config.py  existing_work.py  implement.py  llm.py  main.py  propose.py
autodev/issues/: __init__.py  create.py  fetch.py  find_approved.py
autodev/sources/: __init__.py  fetch.py
autodev/tracking/: __init__.py  update.py
config/: ecosystem.yaml  irmago.yaml  irmamobile.yaml  pbdf-schememanager.yaml  sources.yaml
scripts/: create_tracking_issues.py  setup.sh
tests/: __init__.py  test_config.py  test_existing_work.py  test_llm.py  test_propose.py  test_sources.py
